chore: extract simulation selection